--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "chunhei2008/easy-open-wechat",
+  "name": "zyan/easy-open-wechat",
   "description": "微信公众号第三方平台SDK",
   "keywords": [
     "open-wechat-sdk",
